solved the problem with alignment of bike picture :)

--- a/module03/css/style.css
+++ b/module03/css/style.css
@@ -103,16 +103,19 @@ aside {
   color: #2c2c2c;
 }
 
-.bike {
+/* .bike {
   width: 674px;
   height: 400px;
   border: 1px solid #c8c8c8;
+}*/
+
+.velo {
   display: block;
-  align-items: center;
-  /*background-image: url(../img/bike.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;*/
+  padding: 46.5px 87px;
+  border: 1px solid #c8c8c8;
+
 }
+
 
 footer {
   background: linear-gradient(to top, #444343, #5e5e5e);
